--- a/index.html
+++ b/index.html
@@ -1,20 +1,172 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/styles.css" type="text/css" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-
+      <nav>
+        <span class="company-name">WebStudio</span>
+        <a href="/">Estudio</a>
+        <a href="/">Portafolio</a>
+        <a href="/">Contactos</a>
+        <a href="mailto:info@example.com">info@example.com</a>
+        <a href="tel:+52 55 5529 6000">+52 55 5529 6000</a>
+      </nav>
     </header>
     <main>
+      <!-- REQUEST PRODUCTS -->
+      <section>
+        <p>SOLUCIONES EFICACES PARA</p>
+        <p>SU NEGOCIO</p>
+        <button type="button">Solicite nuestro servicio</button>
+      </section>
+      <!-- VALUES -->
+      <section>
+        <table>
+          <thead>
+            <tr>
+              <th>ATENCIÓN A LOS DETALLES</th>
+              <th>PUNTUALIDAD</th>
+              <th>PLANIFICACIÓN</th>
+              <th>TECNOLOGÍA MODERNA</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Nos adentramos en todos los detalles y</td>
+              <td>Con nosotros, usted puede sentirse</td>
+              <td>Usted podrá observar y participar en</td>
+              <td>Usamos herramientas innovadoras para</td>
+            </tr>
+            <tr>
+              <td>procesos de su negocio, para así</td>
+              <td>seguro y protegido. Un principio</td>
+              <td>cada fase del desarrollo y aplicación de</td>
+              <td>resolver las tareas asignadas. Es hora</td>
+            </tr>
+            <tr>
+              <td>desarrollar una solución a su medida.</td>
+              <td>importante de la empresa: respetar su</td>
+              <td>soluciones.</td>
+              <td>de simplificar los procesos laborales.</td>
+            </tr>
+            <tr>
+              <td></td>
+              <td>tiempo y respetar los plazos acordados.</td>
+              <td></td>
+              <td></td>
+            </tr>
+          </tbody>
+        </table>
+      </section>
+      <!-- WHAT DO WE DO -->
+      <section>
+        <aside>
+          <p class="what-do-we-do-title">A qué nos dedicamos</p>
+          <table>
+            <tr>
+              <td>
+                <figure>
+                  <img
+                    class="what-do-we-do-images"
+                    src="/images/whatWeDo_1.jpg"
+                    alt="Coding on a laptop"
+                  />
+                </figure>
+              </td>
+              <td>
+                <figure>
+                  <img
+                    class="what-do-we-do-images"
+                    src="/images/whatWeDo_2.jpg"
+                    alt="Designing for mobile"
+                  />
+                </figure>
+              </td>
+              <td>
+                <figure>
+                  <img
+                    class="what-do-we-do-images"
+                    src="/images/whatWeDo_3.jpg"
+                    alt="Visualizing a colors palet in a tablet"
+                  />
+                </figure>
+              </td>
+            </tr>
+          </table>
+        </aside>
+      </section>
+      <!-- OUR TEAM -->
+      <section>
+        <aside>
+          <p class="our-team-title">Nuestro Equipo</p>
 
+          <table>
+            <tr>
+              <td>
+                <figure>
+                  <img
+                    class="our-team-images"
+                    src="/images/ourTeam_1.jpg"
+                    alt="Product Designer Man"
+                  />
+                  <figcaption>
+                    <p>Andrés Cubo</p>
+                    <p>Diseñador de Productos</p>
+                  </figcaption>
+                </figure>
+              </td>
+              <td>
+                <figure>
+                  <img
+                    class="our-team-images"
+                    src="/images/ourTeam_2.jpg"
+                    alt="Frontend Developer Woman"
+                  />
+                  <figcaption>
+                    <p>Carla Palacios</p>
+                    <p>Desarrolladora Frontend</p>
+                  </figcaption>
+                </figure>
+              </td>
+              <td>
+                <figure>
+                  <img class="our-team-images" src="/images/ourTeam_3.jpg" alt="Marketing Man" />
+                  <figcaption>
+                    <p>Mario Dorado</p>
+                    <p>Marketing</p>
+                  </figcaption>
+                </figure>
+              </td>
+              <td>
+                <figure>
+                  <img class="our-team-images" src="/images/ourTeam_4.jpg" alt="IU Designer Man" />
+                  <figcaption>
+                    <p>Pablo Mijangos</p>
+                    <p>Diseñador UI</p>
+                  </figcaption>
+                </figure>
+              </td>
+            </tr>
+          </table>
+        </aside>
+      </section>
     </main>
     <footer>
-        
+      <p class="company-name">WebStudio</p>
+      <address>
+        <p>Calz. Ticomán 500, Ciudad de</p>
+        <p>México, CDMX, México</p>
+      </address>
+      <div>
+        <p><a href="mailto:info@example.com">info@example.com</a></p>
+        <p><a href="tel:+52 55 5529 6000">+52 55 5529 6000</a></p>
+      </div>
     </footer>
-</body>
+  </body>
 </html>
