--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <figure>
                   <img
                     class="what-do-we-do-images"
-                    src="/images/whatWeDo_1.jpg"
+                    src="/images/whatWeDo_1.JPG"
                     alt="Coding on a laptop"
                   />
                 </figure>
