src images updated

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <figure>
                   <img
                     class="what-do-we-do-images"
-                    src="/images/whatWeDo_1.JPG"
+                    src="./images/whatWeDo_1.jpg"
                     alt="Coding on a laptop"
                   />
                 </figure>
@@ -83,7 +83,7 @@
                 <figure>
                   <img
                     class="what-do-we-do-images"
-                    src="/images/whatWeDo_2.jpg"
+                    src="./images/whatWeDo_2.jpg"
                     alt="Designing for mobile"
                   />
                 </figure>
@@ -92,7 +92,7 @@
                 <figure>
                   <img
                     class="what-do-we-do-images"
-                    src="/images/whatWeDo_3.jpg"
+                    src="./images/whatWeDo_3.jpg"
                     alt="Visualizing a colors palet in a tablet"
                   />
                 </figure>
@@ -112,7 +112,7 @@
                 <figure>
                   <img
                     class="our-team-images"
-                    src="/images/ourTeam_1.jpg"
+                    src="./images/ourTeam_1.jpg"
                     alt="Product Designer Man"
                   />
                   <figcaption>
@@ -125,7 +125,7 @@
                 <figure>
                   <img
                     class="our-team-images"
-                    src="/images/ourTeam_2.jpg"
+                    src="./images/ourTeam_2.jpg"
                     alt="Frontend Developer Woman"
                   />
                   <figcaption>
@@ -136,7 +136,7 @@
               </td>
               <td>
                 <figure>
-                  <img class="our-team-images" src="/images/ourTeam_3.jpg" alt="Marketing Man" />
+                  <img class="our-team-images" src="./images/ourTeam_3.jpg" alt="Marketing Man" />
                   <figcaption>
                     <p>Mario Dorado</p>
                     <p>Marketing</p>
@@ -145,7 +145,7 @@
               </td>
               <td>
                 <figure>
-                  <img class="our-team-images" src="/images/ourTeam_4.jpg" alt="IU Designer Man" />
+                  <img class="our-team-images" src="./images/ourTeam_4.jpg" alt="IU Designer Man" />
                   <figcaption>
                     <p>Pablo Mijangos</p>
                     <p>Diseñador UI</p>
