--- a/index.html
+++ b/index.html
@@ -10,151 +10,117 @@
   <body>
     <header>
       <nav>
-        <span class="company-name">WebStudio</span>
-        <a href="/">Estudio</a>
-        <a href="/">Portafolio</a>
-        <a href="/">Contactos</a>
-        <a href="mailto:info@example.com">info@example.com</a>
-        <a href="tel:+52 55 5529 6000">+52 55 5529 6000</a>
+        <a href="https://estudiemospues.github.io/goit-markup-hw-01/">
+          <span class="company-name">WebStudio</span>
+        </a>
+        <ul>
+          <li><a href="/">Estudio</a></li>
+          <li><a href="/">Portafolio</a></li>
+          <li><a href="/">Contactos</a></li>
+        </ul>
       </nav>
+      <ul>
+        <li><a href="mailto:info@example.com">info@example.com</a></li>
+        <li><a href="tel:+525555296000">+52 55 5529 6000</a></li>
+      </ul>
     </header>
     <main>
       <!-- REQUEST PRODUCTS -->
       <section>
-        <p>SOLUCIONES EFICACES PARA</p>
-        <p>SU NEGOCIO</p>
+        <h1>SOLUCIONES EFICACES PARA</h1>
+        <h1>SU NEGOCIO</h1>
         <button type="button">Solicite nuestro servicio</button>
       </section>
-      <!-- VALUES -->
+      <!-- COMPANY VALUES -->
       <section>
-        <table>
-          <thead>
-            <tr>
-              <th>ATENCIÓN A LOS DETALLES</th>
-              <th>PUNTUALIDAD</th>
-              <th>PLANIFICACIÓN</th>
-              <th>TECNOLOGÍA MODERNA</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>Nos adentramos en todos los detalles y</td>
-              <td>Con nosotros, usted puede sentirse</td>
-              <td>Usted podrá observar y participar en</td>
-              <td>Usamos herramientas innovadoras para</td>
-            </tr>
-            <tr>
-              <td>procesos de su negocio, para así</td>
-              <td>seguro y protegido. Un principio</td>
-              <td>cada fase del desarrollo y aplicación de</td>
-              <td>resolver las tareas asignadas. Es hora</td>
-            </tr>
-            <tr>
-              <td>desarrollar una solución a su medida.</td>
-              <td>importante de la empresa: respetar su</td>
-              <td>soluciones.</td>
-              <td>de simplificar los procesos laborales.</td>
-            </tr>
-            <tr>
-              <td></td>
-              <td>tiempo y respetar los plazos acordados.</td>
-              <td></td>
-              <td></td>
-            </tr>
-          </tbody>
-        </table>
+        <ul>
+          <li>
+            <h3>ATENCIÓN A LOS DETALLES</h3>
+            <p>
+              Nos adentramos en todos los detalles y procesos de su negocio, para así desarrollar
+              una solución a su medida.
+            </p>
+          </li>
+          <li>
+            <h3>PUNTUALIDAD</h3>
+            <p>
+              Con nosotros, usted puede sentirse seguro y protegido. Un principio importante de la
+              empresa: respetar su tiempo y respetar los plazos acordados.
+            </p>
+          </li>
+          <li>
+            <h3>PLANIFICACIÓN</h3>
+            <p>
+              Usted podrá observar y participar en cada fase del desarrollo y aplicación de
+              soluciones.
+            </p>
+          </li>
+          <li>
+            <h3>TECNOLOGÍA MODERNA</h3>
+            <p>
+              Usamos herramientas innovadoras para resolver las tareas asignadas. Es hora de
+              simplificar los procesos laborales.
+            </p>
+          </li>
+        </ul>
       </section>
       <!-- WHAT DO WE DO -->
       <section>
-        <aside>
-          <p class="what-do-we-do-title">A qué nos dedicamos</p>
-          <table>
-            <tr>
-              <td>
-                <figure>
-                  <img
-                    class="what-do-we-do-images"
-                    src="./images/whatWeDo_1.jpg"
-                    alt="Coding on a laptop"
-                  />
-                </figure>
-              </td>
-              <td>
-                <figure>
-                  <img
-                    class="what-do-we-do-images"
-                    src="./images/whatWeDo_2.jpg"
-                    alt="Designing for mobile"
-                  />
-                </figure>
-              </td>
-              <td>
-                <figure>
-                  <img
-                    class="what-do-we-do-images"
-                    src="./images/whatWeDo_3.jpg"
-                    alt="Visualizing a colors palet in a tablet"
-                  />
-                </figure>
-              </td>
-            </tr>
-          </table>
-        </aside>
+        <h2>A qué nos dedicamos</h2>
+        <ul>
+          <li>
+            <img
+              class="what-do-we-do-images"
+              src="./images/whatWeDo_1.jpg"
+              alt="Coding on a laptop"
+            />
+          </li>
+
+          <li>
+            <img
+              class="what-do-we-do-images"
+              src="./images/whatWeDo_2.jpg"
+              alt="Designing for mobile"
+            />
+          </li>
+          <li>
+            <img
+              class="what-do-we-do-images"
+              src="./images/whatWeDo_3.jpg"
+              alt="Visualizing a colors palet in a tablet"
+            />
+          </li>
+        </ul>
       </section>
       <!-- OUR TEAM -->
       <section>
-        <aside>
-          <p class="our-team-title">Nuestro Equipo</p>
-
-          <table>
-            <tr>
-              <td>
-                <figure>
-                  <img
-                    class="our-team-images"
-                    src="./images/ourTeam_1.jpg"
-                    alt="Product Designer Man"
-                  />
-                  <figcaption>
-                    <p>Andrés Cubo</p>
-                    <p>Diseñador de Productos</p>
-                  </figcaption>
-                </figure>
-              </td>
-              <td>
-                <figure>
-                  <img
-                    class="our-team-images"
-                    src="./images/ourTeam_2.jpg"
-                    alt="Frontend Developer Woman"
-                  />
-                  <figcaption>
-                    <p>Carla Palacios</p>
-                    <p>Desarrolladora Frontend</p>
-                  </figcaption>
-                </figure>
-              </td>
-              <td>
-                <figure>
-                  <img class="our-team-images" src="./images/ourTeam_3.jpg" alt="Marketing Man" />
-                  <figcaption>
-                    <p>Mario Dorado</p>
-                    <p>Marketing</p>
-                  </figcaption>
-                </figure>
-              </td>
-              <td>
-                <figure>
-                  <img class="our-team-images" src="./images/ourTeam_4.jpg" alt="IU Designer Man" />
-                  <figcaption>
-                    <p>Pablo Mijangos</p>
-                    <p>Diseñador UI</p>
-                  </figcaption>
-                </figure>
-              </td>
-            </tr>
-          </table>
-        </aside>
+        <h2>Nuestro Equipo</h2>
+        <ul>
+          <li>
+            <img class="our-team-images" src="./images/ourTeam_1.jpg" alt="Product Designer Man" />
+            <h3>Andrés Cubo</h3>
+            <p>Diseñador de Productos</p>
+          </li>
+          <li>
+            <img
+              class="our-team-images"
+              src="./images/ourTeam_2.jpg"
+              alt="Frontend Developer Woman"
+            />
+            <h3>Carla Palacios</h3>
+            <p>Desarrolladora Frontend</p>
+          </li>
+          <li>
+            <img class="our-team-images" src="./images/ourTeam_3.jpg" alt="Marketing Man" />
+            <h3>Mario Dorado</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img class="our-team-images" src="./images/ourTeam_4.jpg" alt="IU Designer Man" />
+            <h3>Pablo Mijangos</h3>
+            <p>Diseñador UI</p>
+          </li>
+        </ul>
       </section>
     </main>
     <footer>
@@ -164,8 +130,10 @@
         <p>México, CDMX, México</p>
       </address>
       <div>
-        <p><a href="mailto:info@example.com">info@example.com</a></p>
-        <p><a href="tel:+52 55 5529 6000">+52 55 5529 6000</a></p>
+        <ul>
+          <li><a href="mailto:info@example.com">info@example.com</a></li>
+          <li><a href="tel:+525555296000">+52 55 5529 6000</a></li>
+        </ul>
       </div>
     </footer>
   </body>
